--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -150,7 +150,7 @@ Extend 40Pin接口 包含多路PWM，以PWM3通道为例，按照以下命令进
 
 示例：设置PWM3通道，周期10000ns，占空比5000ns，极性为normal
 
-PWM3在第一个PWM模块，故路径为/sys/class/pwm/pwmchip0，pwmchip0下面则按你使能的pwm排序，从0开始
+PWM3在第一个PWM模块，故路径为/sys/class/pwm/pwmchip0，pwmchip0下面则按你使能顺序，从pwm0开始排序
 
 ```
 $ echo 0 > /sys/class/pwm/pwmchip0/export
