--- a/t113-s3/zh/12-硬件功能测试.md
+++ b/t113-s3/zh/12-硬件功能测试.md
@@ -10,16 +10,26 @@
 
 ## LVDS
 
+硬件连接
+
+![1732673112060](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/1732673112060.png)
+
 ### 显示
 ```
+fbinit
 echo 8 > /sys/devices/virtual/disp/disp/attr/colorbar
 ```
+![image-20241127100853924](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20241127100853924.png)
+
 ### 触控
 
 ``` 
 ts_test
 ```
 
+点击Draw按钮显示触摸轨迹
+
+![image-20241127101444185](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20241127101444185.png)
 
 ### 背光
 
@@ -43,24 +53,14 @@ awrpaf_test/        dsp_debug_test/     g2d_test/           Makefile            
 
 
 
-
-
-## DUAL LVDS
-
-
-
-
-
 ## 耳机
 
 ``` 
 tinymix set "Headphone Switch" 1
-aplay -Dhw:audiocodec -vv sample-15s.wav
+aplay -Dhw:audiocodec -vv /etc/sample-15s.wav
 ```
 
-
-
-
+![image-20241127110956315](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20241127110956315.png)
 
 ## 喇叭
 
@@ -69,7 +69,7 @@ aplay -Dhw:audiocodec -vv sample-15s.wav
 播放音频
 
 ```
-aplay -Dhw:audiocodec -vv sample-15s.wav
+aplay -Dhw:audiocodec -vv /etc/sample-15s.wav
 ```
 
 
@@ -85,10 +85,8 @@ aplay -Dhw:audiocodec  -vv test.wav
 
 ## WIFI
 
-**linux 平台命令行**
-
 ```shell
-# insmod /lib/modules/5.4.61/8723bu.ko
+# insmod /lib/modules/5.4.61/8723bu.ko (系统自动加载)
 # vi /etc/wpa_supplicant.conf
 # cat /etc/wpa_supplicant.conf
 ctrl_interface=/var/run/wpa_supplicant
