--- a/rk3576/zh/12-功能使用说明.md
+++ b/rk3576/zh/12-功能使用说明.md
@@ -131,6 +131,8 @@ AP6256
 支持EC20 模块
 ```
 
+![image-20241127174458223](C:\Users\16708\AppData\Roaming\Typora\typora-user-images\image-20241127174458223.png)
+
 
 
 
