--- a/rk3576/zh/12-功能使用说明.md
+++ b/rk3576/zh/12-功能使用说明.md
@@ -131,7 +131,11 @@ AP6256
 支持EC20 模块
 ```
 
+**信号出现感叹号问题**
+
 ![image-20241127174458223](C:\Users\16708\AppData\Roaming\Typora\typora-user-images\image-20241127174458223.png)
+
+
 
 
 
