--- a/rk3576/zh/12-功能使用说明.md
+++ b/rk3576/zh/12-功能使用说明.md
@@ -135,6 +135,11 @@ AP6256
 
 ![image-20241127174458223](C:\Users\16708\AppData\Roaming\Typora\typora-user-images\image-20241127174458223.png)
 
+原生谷歌会向服务器 *captive_portal_server* 发送请求，根据判断网络是否可用
+
+```
+```
+
 
 
 
