--- a/rk3576/zh/12-功能使用说明.md
+++ b/rk3576/zh/12-功能使用说明.md
@@ -137,7 +137,10 @@ AP6256
 
 原生谷歌会向服务器 *captive_portal_server* 发送请求，根据判断网络是否可用
 
+如果不想出现，重新配置 
+
 ```
+adb shell settings put global captive_portal_server 204.gentool.top
 ```
 
 
