--- a/rk3576/zh/12-功能使用说明.md
+++ b/rk3576/zh/12-功能使用说明.md
@@ -135,17 +135,13 @@ AP6256
 
 ![image-20241127174458223](C:\Users\16708\AppData\Roaming\Typora\typora-user-images\image-20241127174458223.png)
 
-原生谷歌会向服务器 *captive_portal_server* 发送请求，根据判断网络是否可用
+原生谷歌会向服务器 captive_portal_server 发送请求，根据判断网络是否可用
 
-如果不想出现，重新配置 
+如果不想出现，配置 captive_portal_server ，重启即可
 
 ```
 adb shell settings put global captive_portal_server 204.gentool.top
 ```
-
-
-
-
 
 
 
