--- a/t113-s3/zh/12-硬件功能测试.md
+++ b/t113-s3/zh/12-硬件功能测试.md
@@ -86,7 +86,7 @@ aplay -Dhw:audiocodec  -vv test.wav
 ## WIFI
 
 ```shell
-# insmod /lib/modules/5.4.61/8723bu.ko (系统自动加载)
+修改wifi名和密码
 # vi /etc/wpa_supplicant.conf
 # cat /etc/wpa_supplicant.conf
 ctrl_interface=/var/run/wpa_supplicant
@@ -102,7 +102,7 @@ network={
 # udhcpc -i wlan0
 ```
 
-
+![image-20241127182924328](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20241127182924328.png)
 
 ## 蓝牙
 
@@ -112,7 +112,7 @@ hciconfig hci0 up
 hcitool scan
 ```
 
-
+![image-20241127183022026](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20241127183022026.png)
 
 ## RTC
 
@@ -170,8 +170,10 @@ kill -9 (进程号)
 将格式化后的SD卡插入SD卡槽，系统自动挂载
 
 ``` 
-time dd if=/dev/zero of=/mnt/sdcard/mmcblk1p1/test bs=1M count=300 oflag=direct
+time dd if=/dev/zero of=/dev/mmcblk1 bs=1M count=300 oflag=direct
 ```
+
+![image-20241127183750626](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20241127183750626.png)
 
 ## USB
 
