--- a/t113-s3/zh/12-硬件功能测试.md
+++ b/t113-s3/zh/12-硬件功能测试.md
@@ -179,9 +179,10 @@ time dd if=/dev/zero of=/dev/mmcblk1 bs=1M count=300 oflag=direct
 
 将格式化后的U盘USB接口，系统自动挂载
 ``` 
-time dd if=/dev/zero of=/mnt/usb/sda1/test bs=1M count=300 oflag=direct
+time dd if=/dev/zero of=/dev/sda bs=1M count=300 oflag=direct
 ```
 
+![image-20241127183922113](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20241127183922113.png)
 
 ## CAN
 
@@ -213,13 +214,11 @@ $ ip link set can1 type can bitrate 500000
 $ ip link set can1 up
 
 # 开始收发测试(CAN0接受、CAN1发送)
-$ candump can0
+$ candump can0 &
 $ cansend can1 123#DEADBEEF
 ```
 
-
-
-
+![image-20241127184109190](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20241127184109190.png)
 
 ## 串口
 
