--- a/t113-s3/zh/12-硬件功能测试.md
+++ b/t113-s3/zh/12-硬件功能测试.md
@@ -270,9 +270,13 @@ Mobaxterm软件地址下载：https://mobaxterm.mobatek.net/
 **测试命令**
 
 ``` 
-minicom -D /dev/ttyS4 -b 115200
+stty -F /dev/ttyS5 speed 115200 cs8
+echo KICKPI > /dev/ttyS4
 ```
 
+![image-20241127185919839](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20241127185919839.png)
+
+![image-20241127185925821](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20241127185925821.png)
 
 ### RS232串口测试
 
@@ -280,11 +284,7 @@ minicom -D /dev/ttyS4 -b 115200
 
 
 
-
-
 **测试命令**
-
-stty -F /dev/ttyS5 speed 115200 cs8
 
 
 
