--- a/h618/zh/20-Ubuntu2204系统定制.md
+++ b/h618/zh/20-Ubuntu2204系统定制.md
@@ -20,7 +20,7 @@ sudo passwd root
 
 ![image-20241105154155771](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20241105154155771.png)
 
-
+取消自动登录: 删掉 --autologin <自动登录的用户名>
 
 
 ## 制作SD启动卡
