--- a/a133/zh/10-系统镜像烧录.md
+++ b/a133/zh/10-系统镜像烧录.md
@@ -1,15 +1,15 @@
 # 10-系统镜像烧录
 
-[TOC]
 
-K5 目前提供 Android10.0 以及 ubuntu16.04 镜像, 可使用 `USB烧录线` 把镜像烧录到板载eMMC
+
+K5 目前提供 Android10.0 以及 Ubuntu16.04 镜像, 可使用 `USB烧录线` 将镜像烧录到板载eMMC
 
 
 
 
 ## 镜像烧录
 
-开发板出厂默认烧录好镜像，若不需要更换系统的话，可直接跳过此步骤，启动系统
+开发板出厂默认烧录好镜像，若不需要更换系统的话，可直接跳过此步骤，上电启动系统
 
 安卓和Ubuntu烧录方式相同，选择的镜像不同
 
@@ -40,7 +40,7 @@ K5 目前提供 Android10.0 以及 ubuntu16.04 镜像, 可使用 `USB烧录线` 
 >
 > ​			Android10.0 Tablet 平板
 >
-> ​			Ubuntu 16.04
+> ​			Ubuntu 16.04 Xfce 桌面版
 
 
 
@@ -69,12 +69,10 @@ a133_linux_c3_uart0_lvds-7-1024-600-ubuntu1604_xfce_*.img
 根据img名称词条可选择对应的镜像进行烧录
 	android10 - 代表 Android10.0 Tablet 平板系统
 	ubuntu1604 - 代表 Ubuntu 16.04 系统
-	lvds-7-1024-600 代表 软件适配的为 signal lvds 1024*600 的屏 （内部的屏）
+	lvds-7-1024-600 代表 软件适配的为 signal lvds 1024*600 的屏
 	lvds-21-1920-1080 代表 软件适配的为 dual lvds 1920*1080 的屏 
 	xfce - 代表 xfce 桌面
 ```
-
-
 
 
 
@@ -91,6 +89,8 @@ PhoenixSuit/Drivers/AW_Driver/
 > 驱动不支持直接打开安装，必须在设备管理器中 识别出未知设备后才能安装驱动
 
 
+
+**进入烧录模式**
 
 **串口方式进入烧录模式**
 
