--- a/a133/zh/12-硬件功能使用说明.md
+++ b/a133/zh/12-硬件功能使用说明.md
@@ -1,7 +1,5 @@
 # 12-硬件功能使用说明
 
-[TOC]
-
 
 
 ## 扩展引脚 <a name="扩展引脚"></a>
@@ -28,6 +26,8 @@
 * 支持保持键和通用键
 * 支持正常、持续和单一工作模式
 * 电源电压： 1.8 V，功率参考电压： 1.35 V，模拟输入，检测电压范围：0~LEVELB（最大值为1.266 V）
+
+>开发和使用见 'LRADC按键配置' 文档
 
 
 
@@ -179,7 +179,7 @@ K5 开发板 配备 AW859A高性能WIFI模块
 
 ## KEY
 
-K2B配备3个按键，分别是FEL KEY、RST KEY、PER KEY
+K5 配备3个按键，分别是FEL KEY、RST KEY、PER KEY
 
 FEL KEY：按键在UBOOT阶段可用于进入烧录模式
 
@@ -252,10 +252,6 @@ console:/ # echo 0 > /sys/class/leds/fan_en/brightness
 
 
 
-## 4G通讯模块
-
-
-
 
 ## 喇叭
 主板上丝印有P和N标识，有两个座子，靠近风扇一侧的喇叭座子为左音道，另一个为右音道
@@ -287,8 +283,6 @@ console:/ # echo 0 > /sys/class/leds/fan_en/brightness
 console:/ # tinycap
 Usage: tinycap file.wav [-D card] [-d device] [-c channels] [-r rate] [-b bits] [-p period_size] [-n n_periods] [-T capture time]
 ```
-
-
 
 ```
 tinycap file.wav -D 0 -d 0  -c 2 -r 48000 -b 16 -T 10
