--- a/h618/en/13-I2C3-pcf8563rtc.md
+++ b/h618/en/13-I2C3-pcf8563rtc.md
@@ -79,20 +79,79 @@ Kernel enable
 **** In general, the simplest step to test whether rtc is working properly is to load the rtc driver (or its own driver has been compiled into the kernel) :
 
 1. Display the current Linux system time
-`date`
-[2] If the date is also out of whack, like 1970 or something, rather than my current time, like 2009, then manually set the correct time yourself
-date MMDDhhmm[[[YY]YY][.ss]][.ss]
-3. Display the hardware rtc time
-`hwclock`
-Since this is the first time for the rtc driver to load, the correct time has not been set, so the time displayed at this time is mostly incorrect in 1969,1970.
-4. Set the Linux system time to the hardware rtc
-`hwclock -w`
-5. Check whether the hardware rtc time is the same as that in the system
-`hwclcok`
-If the driver is working correctly, the time shown here should be consistent with your current system time, which is the legendary time synchronization...
-Otherwise, it means that your driver is not working correctly, and the system time is not correctly set into the hardware rtc, so you have to go back to debugging the driver and find the reason.
-6. Wait a few seconds and type again:
-`hwclock`
-If it is normal, you will see the time here, with the corresponding number of seconds added to the time shown in Step 5
-That means the rtc is working properly.
+  `date`
+  [2] If the date is also out of whack, like 1970 or something, rather than my current time, like 2009, then manually set the correct time yourself
+  date MMDDhhmm[[[YY]YY][.ss]][.ss]
 
+2. Display the hardware rtc time
+  `hwclock`
+  Since this is the first time for the rtc driver to load, the correct time has not been set, so the time displayed at this time is mostly incorrect in 1969,1970.
+
+3. Set the Linux system time to the hardware rtc
+  `hwclock -w`
+
+4. Check whether the hardware rtc time is the same as that in the system
+  `hwclcok`
+  If the driver is working correctly, the time shown here should be consistent with your current system time, which is the legendary time synchronization...
+  Otherwise, it means that your driver is not working correctly, and the system time is not correctly set into the hardware rtc, so you have to go back to debugging the driver and find the reason.
+
+5. Wait a few seconds and type again:
+  `hwclock`
+  If it is normal, you will see the time here, with the corresponding number of seconds added to the time shown in Step 5
+  That means the rtc is working properly.
+
+  
+
+#### RTC interrupt test:
+
+set the alarm clock
+
+```
+echo 0 > /sys/class/rtc/rtc0/wakealarm  //empty
+
+echo +60 > /sys/class/rtc/rtc0/wakealarm //set-up time 
+```
+
+View the rtc information
+
+`cat /proc/driver/rtc`
+
+
+
+![img](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/wps1.jpg) 
+
+Alarm clock time to RTC interrupt has printing (need to add yourself)
+
+```
+static irqreturn_t hym8563_irq(int irq, void *dev_id)
+{
+  struct hym8563 *hym8563 = (struct hym8563 *)dev_id;
+  struct i2c_client *client = hym8563->client;
+  struct mutex *lock = &hym8563->rtc->ops_lock;
+  int data, ret;
+  printk("kickpi %s %d\n",__FUNCTION__,__LINE__); //加的打印
+  mutex_lock(lock);
+
+  /* Clear the alarm flag */
+  data = i2c_smbus_read_byte_data(client, HYM8563_CTL2);
+  if (data < 0) {
+    dev_err(&client->dev, "%s: error reading i2c data %d\n",
+      __func__, data);
+    goto out;
+  }
+  data &= ~HYM8563_CTL2_AF;
+  
+  ret = i2c_smbus_write_byte_data(client, HYM8563_CTL2, data);
+  if (ret < 0) {
+   dev_err(&client->dev, "%s: error writing i2c data %d\n",
+     __func__, ret);
+  }
+out:
+  mutex_unlock(lock);
+  return IRQ_HANDLED;
+}
+```
+
+The results are as follows:
+
+![img](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/wps2.jpg)
