--- a/h618/zh/20-Ubuntu2204系统定制.md
+++ b/h618/zh/20-Ubuntu2204系统定制.md
@@ -22,8 +22,6 @@ sudo passwd root
 
 ![image-20241105154155771](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20241105154155771.png)
 
-取消自动登录: 删掉 --autologin <自动登录的用户名>
-
 
 
 
@@ -39,7 +37,8 @@ Ubuntu22.04 系统 仅提供镜像文件，编译可参考 ARMBIAN SDK
 
 ## 备份SD卡系统
 
-
+> 注意：这种方式替换后的rootfs存在mount挂载UUID问题 可以blkid查看正确的UUID 然后修改/etc/fstab
+>
 
 接好U盘在电脑上，大小至少16GB以上，打包出来的镜像会比较大
 
@@ -92,18 +91,23 @@ $ vim scripts/debootstrap.sh
         write_uboot $LOOP
 +       
 +		# 保留boot分区、删除原ROOTFS内容
-+       mv $MOUNT/boot $MOUNT/../
++       mv $MOUNT/boot $MOUNT/../boot
 +       rm $MOUNT/* -rf
 +
 +		# 替换自定义ROOTFS,以下示例为解压tar包,其他替换方式可自行修改
 +       tar -xf ${BUILD_DIR}/rootfs-base/stage3-arm64-openrc-20240707T225101Z.tar -C $MOUNT/
 +
 +		# 回溯boot分区
-+       mv $MOUNT/../boot $MOUNT/
++       mv $MOUNT/../boot $MOUNT/boot
  
         # fix wrong / permissions
         chmod 755 $MOUNT
+        
 ```
+
+或参考其他客户成功的案例修改方式：
+
+![aefb737ab69097882aedfad9c2fdb27](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/aefb737ab69097882aedfad9c2fdb27.png)
 
 
 
@@ -154,11 +158,12 @@ $ reboot
 
 
 
-### 设置wifi热点模式
+### 设置wifi热点（AP）模式
+
+查看是否支持AP模式
 
 ```
-iw list | grep AP
-#查看是否支持AP模式
+$ iw list | grep AP
 Device supports AP-side u-APSD.
 		 * AP
 		 * AP/VLAN
@@ -173,8 +178,14 @@ Device supports AP-side u-APSD.
 		 * AP/VLAN: 0x00 0x10 0x20 0x30 0x40 0x50 0x60 0x70 0x80 0x90 0xa0 0xb0 0xc0 0xd0 0xe0 0xf0
 		 * AP: 0x00 0x20 0x40 0xa0 0xb0 0xc0 0xd0
 		 * AP/VLAN: 0x00 0x20 0x40 0xa0 0xb0 0xc0 0xd0
-# AP/VLAN则可以表示硬件支持
 
+```
+
+> AP/VLAN则可以表示硬件支持
+
+
+
+```
 #创建依赖
 sudo apt-get install util-linux hostapd dnsmasq iptables iproute2 haveged 
 
@@ -189,7 +200,11 @@ sudo ip link set dev <virtualwlanname> address 22:33:44:55:66:00
 # 随意填写，假如冲突则换一个，<virtualwlanname>是虚拟的无线网卡名
 #例如命令：
 sudo ip link set dev wlo2 address 22:33:44:55:66:00
+```
 
+
+
+```
 #查看创建情况
 sudo iw dev <virtualwlanname> info
 sudo iw dev wlo2 info
@@ -205,26 +220,38 @@ sudo iw dev wlo2 info
 	multicast TXQ:
 		qsz-byt	qsz-pkt	flows	drops	marks	overlmt	hashcol	tx-bytestx-packets
 		0	0	0	0	0	0	0	0	0
-# 注意：重启电脑后，这里创建的虚拟网卡就会失效
-# 注意：重启电脑后，这里创建的虚拟网卡就会失效
-# 注意：重启电脑后，这里创建的虚拟网卡就会失效
+```
 
+> 注意：重启电脑后，这里创建的虚拟网卡就会失效
+>
+> 注意：重启电脑后，这里创建的虚拟网卡就会失效
+>
+> 注意：重启电脑后，这里创建的虚拟网卡就会失效
 
 1. 下载安装工具 create_ap
+
+```
 git clone https://github.com/oblique/create_ap
 cd */create_ap
 sudo make install
-
+```
 
 2. 使用create_ap创建热点
 
-sudo create_ap -c 11 <virtualwlanname> <wirelessname> <SSID> <password> 
 
-# <wirelessname> 是你的无线网卡的姓名，<virtualwlanname> 虚拟网卡名，<SSID> <password>分别是创建的热点wifi名和密码
+
+```
+sudo create_ap -c 11 <virtualwlanname> <wirelessname> <SSID> <password> 
+#<wirelessname> 是你的无线网卡的姓名，<virtualwlanname> 虚拟网卡名，<SSID> <password>分别是创建的热点wifi名和密码
+
 #例如 
 sudo create_ap -c 11 wlo2 wlan0 m3 88888888
 
+```
+
 3. 如果创建的热点卡住
+
+```
 开启热点时报如下错误:
 #RTNETLINK answers: Device or resource busy
 
@@ -233,9 +260,43 @@ sudo create_ap -c 11 wlo2 wlan0 m3 88888888
      
 可以如下操作停止之前创建的热点，然后重启开启热点。
 sudo create_ap --stop <virtualwlanname>  #<virtualwlanname> 虚拟网卡名
-
-
 ```
+
+
+
+
+
+### 连接WiFi并获取ip
+```
+touch /etc/wpa_supplicant.conf
+vi /etc/wpa_supplicant.conf
+ctrl_interface=/var/run/wpa_supplicant
+ap_scan=1
+update_config=1
+
+network={
+        ssid="wifi_oranth_2.4"
+        psk="123456789"
+        key_mgmt=WPA-PSK
+}
+wpa_supplicant -D nl80211 -i wlan0 -c /var/run/wpa_supplicant -B
+dhclient wlan0
+```
+
+### 设置开机自动连接wifi并获取ip
+
+``` 
+vi /etc/network/interfaces
+auto wlan0
+allow-hotplug wlan0
+iface wlan0 inet dhcp
+wpa-conf /etc/wpa_supplicant.conf
+```
+
+
+
+
+
 
 
 
@@ -259,3 +320,138 @@ ssh kickpi@<IP>   //密码 kickpi
 网站是https://ubuntu.pkgs.org/20.04/ubuntu-main-arm64/gcc-9_9.3.0-10ubuntu2_arm64.deb.html 可以直接搜索想要的依赖包名
 
 ![f78e90f7748d198d11dbbd163bb33a9](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/f78e90f7748d198d11dbbd163bb33a9.png)
+
+
+
+## PIN 控制
+
+### pin 脚计算
+
+( B ~ J ) 一组按32位算
+
+如 PB2 为 2 组，2号脚
+
+```
+32 x ( 2 - 1) + 2 =  34
+```
+
+PH3 为 8组， 3号脚
+
+```
+32 x ( 8 - 1) + 3 =  227 
+```
+
+其他引脚类比计算即可
+
+
+
+### sys gpio控制
+
+当存在将拓展引脚配置为输入的需求，默认软件的gpio-led不能满足需求。
+
+将GPIO释放出来，通过/sys/class/gpio进行控制
+
+
+
+步骤一
+
+先将对应GPIO引脚注释，/sys/class/gpio/export 只能导入未注册的 gpio
+
+比如PH8，如需其他引脚，一样在 leds 结点下注释即可 ,  下面内容都以PH8 做举例
+
+```diff
+vim longan/device/config/chips/h618/configs/p2/linux-5.4/board.dts  //android
+vim source/kernel/linux-5.4-h618/arch/arm64/boot/dts/sunxi/board.dts //Linux
++ /*
+			PH8 {
+				label = "PH8";
+				gpios = <&pio PH 8 1 0 1 0>;
+				linux,default_trigger = "default-on";
+				default-state = "on";
+			};
++ */
+```
+
+
+
+步骤二
+
+​		编译镜像，重新烧录
+
+
+
+步骤三
+
+​		确认gpio未被注册
+
+```
+root@kickpi:~# cat /sys/kernel/debug/pinctrl/pio/pinmux-pins  | grep PH8
+pin 232 (PH8): (MUX UNCLAIMED) (GPIO UNCLAIMED)
+```
+
+​		能够看到PH8未被使用，且对应 pin 值为 232 ，引脚计算见 [pin脚计算](# pin脚计算)
+
+
+
+步骤四
+
+​		通过 /sys/class/gpio/export 注册 PH8 并进行控制
+
+```
+// 注册
+root@kickpi:~# echo  232 > /sys/class/gpio/export
+// 查看是否生成
+root@kickpi:~# ls /sys/class/gpio/
+export  gpio232  gpiochip0  gpiochip352  unexport
+// 注册后的结点内容
+root@kickpi:~# ls /sys/class/gpio/gpio232
+active_low  device  direction  edge  power  subsystem  uevent  value
+root@kickpi:~#
+```
+
+​			通过结点下的内容控制 gpio , 常用如下
+
+```
+direction
+	in / out
+	echo in > /sys/class/gpio/gpio232/direction
+	echo out > /sys/class/gpio/gpio232/direction
+value
+	0 / 1
+	cat /sys/class/gpio/gpio232/value 		// 读取
+	echo 1 > /sys/class/gpio/gpio232/value	// 配置高电平
+	echo 0 > /sys/class/gpio/gpio232/value  // 配置低电平
+```
+
+
+
+### sunxi gpio 控制
+
+```
+cd /sys/kernel/debug/sunxi_pinctrl
+
+查看 pin 的配置
+# echo PH8 > sunxi_pin
+# cat sunxi_pin_configure
+
+配置 pin 为 gpio 模式
+# echo 'PH8 0' > function
+
+修改 pin 的上拉属性
+# echo 'PH8 1' > pull
+// 查看修改情况
+# cat pull					
+# cat sunxi_pin_configure
+
+查看 pin 电平
+# cat data
+
+注意：
+当操作PL及之后的pin ， 需要切换pin的设备， 否则操作失败
+echo pio > /sys/kernel/debug/sunxi_pinctrl/dev_name
+cat /sys/kernel/debug/sunxi_pinctrl/dev_name
+
+echo r_pio > /sys/kernel/debug/sunxi_pinctrl/dev_name
+cat /sys/kernel/debug/sunxi_pinctrl/dev_name
+```
+
