--- a/rk356x/zh/10-系统镜像烧录.md
+++ b/rk356x/zh/10-系统镜像烧录.md
@@ -112,7 +112,7 @@ Maskrom模式 常用于系统损坏后，强制烧录镜像
 
 1. Window电脑上打开烧录工具（参考以上说明安装烧录工具）
 2. 开发板OTG接口 连接 电脑USB接口
-3. 保持长按 RECOVERY按键，并且连接DC电源供电接口
+3. 保持长按 RECOVERY按键，并且连接DC电源供电接口(也可按复位键复位)
 4. 查看 镜像烧录工具 是否正常识别Loader设备
 5. 若正常识别到Loader设备，则可松开RECOVERY按键，否则重复上述步骤多尝试几次
 6. 进入Maskrom模式，还是上述步骤仅第3步换成长按板子背面的maskrom按键
@@ -153,7 +153,7 @@ Maskrom模式 常用于系统损坏后，强制烧录镜像
 
 1. 烧录工具 成功识别板卡设备（若识别不到，返回上一步确认操作）
 2. 进入分区镜像烧录页面
-3. 勾选烧录分区项
+3. 勾选烧录分区项(一定需要勾选Parameter)
 4. 选择镜像路径
 5. 开始烧录镜像
 6. 查看 烧录日志，烧录成功后自动重启进入系统
