--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -134,6 +134,40 @@ Android13.0系统 USB默认支持OTG模式，可自动切换主从功能
 
 Linux系统 USB默认为HOST模式，暂不支持OTG
 
+### ADB调试
+
+Android支持adb调试（type-c接口连接主机）
+
+  * adb的主要命令如下：
+
+  	#####**adb devices**
+  	 - 说明：查看当前连接的设备， 连接到计算机的设备或者模拟器将会列出显示
+  	 - adb start-server
+  	 - 说明：启动adb
+  	
+  	#####adb kill-server
+  	 - 说明：关闭adb
+  	
+  	#####adb shell
+  	  - 说明：这个命令将登录设备的shell, 后面加直接运行设备命令， 相当于执行远程命令
+  	
+  	#####adb push
+  	  - 说明：此命令可以把电脑上的文件复制到开发板上
+  	  - 举例： adb push hello.c /tmp/ 这样就把电脑上的hello.c文件复制到了开发板上的/tmp目录下
+  	
+  	#####adb pull
+  	  -	说明：此命令可以把开发板上的文件复制到电脑上
+  	  - 举例： adb pull /tmp/hello.c ./ 将开发板上/tmp目录下的文件hello.c复制到当前目录
+  	
+  	#####adb version
+  	  - 说明：查看adb的版本
+  	
+  	#####adb help
+  	  - 说明：adb的帮助，有关更多命令详情，请使用adb help命令查看
+
+
+
+
 
 
 ## 6. PWM
@@ -150,7 +184,7 @@ Extend 40Pin接口 包含多路PWM，以PWM3通道为例，按照以下命令进
 
 示例：设置PWM3通道，周期10000ns，占空比5000ns，极性为normal
 
-PWM3在第一个PWM模块，故路径为/sys/class/pwm/pwmchip0，pwmchip0下面则按你使能顺序，从pwm0开始排序
+PWM路径为/sys/class/pwm，pwmchip* 则按你使能顺序从0开始排序  设置pwmchip0如下：
 
 ```
 $ echo 0 > /sys/class/pwm/pwmchip0/export
@@ -433,7 +467,7 @@ $ source /rockchip-test/gpu/test_fullscreen_glmark2.sh
 =======================================================
 ```
 
-> 外接显示屏可查看GPU渲染图形，调试串口可查看GPU渲染日志
+> 外接显示屏可查看GPU渲染图形（得分约49），调试串口可查看GPU渲染日志（得分约203）
 >
 > 根据GPU性能差异，大概需要等待10分钟左右可完成性能测试
 
@@ -622,10 +656,19 @@ $ echo A > /dev/watchdog
 
 ![image-20231215153217640](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20231215153217640.png)
 
-<<<<<<< HEAD
-=======
 
->>>>>>> parent of 4c4f9c3... test
+
+![1733198014256](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/1733198014256.png)
+
+```
+/etc/ppp/peers/quectel-pppd.sh /dev/ttyS4
+```
+
+
+
+![image-20241203115419752](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20241203115419752.png)
+
+
 
 ## 23. 喇叭
 
