--- a/h618/zh/12-硬件功能测试.md
+++ b/h618/zh/12-硬件功能测试.md
@@ -228,3 +228,22 @@ system下，找到developer options
 
 
 
+## 9.WIFI
+
+```shell
+修改wifi名和密码
+# vi /etc/wpa_supplicant.conf
+# cat /etc/wpa_supplicant.conf
+ctrl_interface=/var/run/wpa_supplicant
+ap_scan=1
+update_config=1
+
+network={
+        ssid="wifi_oranth_2.4"
+        psk="123456789"
+        key_mgmt=WPA-PSK
+}
+# wpa_supplicant -D nl80211 -i wlan0 -c /etc/wpa_supplicant.conf -B
+# udhcpc -i wlan0
+```
+
