--- a/h618/zh/13-I2C3-pcf8563rtc修改.md
+++ b/h618/zh/13-I2C3-pcf8563rtc修改.md
@@ -93,3 +93,56 @@ config RTC_DRV_PCF8563
 `hwclock`
 正常的话，会看到此处的时间，相对步骤5中显示的时间，增加了对应的那几秒
 那就说明rtc正常工作了。
+
+#### RTC 中断测试：
+
+设置闹钟
+
+`echo 0 > /sys/class/rtc/rtc0/wakealarm`   //清空
+
+`echo +60 > /sys/class/rtc/rtc0/wakealarm `    //设置时间 
+
+查看rtc信息
+
+`cat /proc/driver/rtc`
+
+ 
+
+![img](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/wps1.jpg) 
+
+闹钟时间到RTC中断有打印（需要自己添加）
+
+```
+static irqreturn_t hym8563_irq(int irq, void *dev_id)
+{
+  struct hym8563 *hym8563 = (struct hym8563 *)dev_id;
+  struct i2c_client *client = hym8563->client;
+  struct mutex *lock = &hym8563->rtc->ops_lock;
+  int data, ret;
+  printk("kickpi %s %d\n",__FUNCTION__,__LINE__); //加的打印
+  mutex_lock(lock);
+
+  /* Clear the alarm flag */
+  data = i2c_smbus_read_byte_data(client, HYM8563_CTL2);
+  if (data < 0) {
+    dev_err(&client->dev, "%s: error reading i2c data %d\n",
+      __func__, data);
+    goto out;
+  }
+  data &= ~HYM8563_CTL2_AF;
+  
+  ret = i2c_smbus_write_byte_data(client, HYM8563_CTL2, data);
+  if (ret < 0) {
+   dev_err(&client->dev, "%s: error writing i2c data %d\n",
+     __func__, ret);
+  }
+out:
+  mutex_unlock(lock);
+  return IRQ_HANDLED;
+}
+```
+
+结果如下：
+
+![img](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/wps2.jpg) 
+
