--- a/h618/zh/31-扩展引脚配置.md
+++ b/h618/zh/31-扩展引脚配置.md
@@ -102,3 +102,21 @@ gpio-para 是全志的GPIO控制驱动，可实现简单的电平高低控制
 };
 ```
 
+
+
+## 修改UART控制端口
+
+修改debug_uart到你想用的uart，取消就用未使能的uart口
+
+> uart0固定会打印uboot日志
+
+```
++++ b/source/kernel/linux-5.4-h618/arch/arm64/boot/dts/sunxi/uEnv/uEnv.txt
+@@ -4,4 +4,4 @@ console=both
+ disp_mode=1080p60
+ fb0_width=1920
+ fb0_height=1080
+-debug_uart=ttyAS0
++debug_uart=ttyAS3
+```
+
