--- a/t113-s3/zh/10-系统镜像烧录.md
+++ b/t113-s3/zh/10-系统镜像烧录.md
@@ -19,10 +19,9 @@
 以下为工具在网盘中所对应的目录结构
 
 ```
-└── 2-System Image 系统镜像
-    └── K2B
-       	├── Android12 TV
-       	├── Android12 Tablet
+└── 2-Image系统镜像
+    └── K4B
+       	├── Buildroot201902
        	└── Ubuntu2204
 └── 5-DevelopmentTools开发工具
     └── USB ImageBurnTool 镜像烧录工具
@@ -60,17 +59,17 @@ PhoenixSuit/Drivers/AW_Driver/
 
 **主板进入烧录模式**
 
-1. 按住RECOVERY烧录按键（或板子背面的maskrom按键进入强烧模式）
+1. 按住板子背面maskrom烧录按键
 
-2. 主板上电，如果已上电则需重新上电（按一下复位键）
+2. 主板上电，如果已上电则需重新上电（按一下RST复位键）
 
 3. 复位后，烧录键三秒左右后松开
 
    > 详细教程如下面
 
-![image-20240306170511855](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20240306170511855.png)
+![image-20241218111555095](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20241218111555095.png)
 
-
+![image-20241218111818425](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20241218111818425.png)
 
 **打开电脑设备管理器界面**
 
@@ -143,12 +142,9 @@ https://support.microsoft.com/zh-cn/windows/%E6%97%A0%E6%B3%95%E5%9C%A8%E6%AD%A4
 
 操作步骤：
 
-1. 按住 RECOVERY烧录按键（或板子背面的maskrom按键进入强烧模式）
-2. 主板上电，如果已上电则需重新上电（按一下复位键）
-3. 按一下复位后，烧录键三秒左右松开
-4. 如果电脑有打开烧录软件，会有弹窗提示 (如果没有请多尝试几次上面步骤)
-
-![image-20240306170600024](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20240306170600024.png)
+1. 按住板子背面maskrom烧录按键
+2. 主板上电，如果已上电则需重新上电（按一下RST复位键）
+3. 如果电脑有打开烧录软件，会有弹窗提示 (如果没有请多尝试几次上面步骤)
 
 
 
