--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -12,13 +12,19 @@
 
 
 
-## 调试串口
+## UART
+
+调试串口使用
 
 40PIN座子右下脚 35-RX ，37-TX  ，39 - GND
 
 波特率：1500000 
 
 （接入座子的串口转USB工具也需要支持 1500000 波特率才能正常显示）
+
+
+
+普通串口使用
 
 
 
