--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -115,13 +115,11 @@ HDCP v2.3 and HDCP v1.4
 
 ## 以太网
 
-​		eth0 / eth1
-
-​		1000M x 2
-
 ```
+eth0 / eth1 (1000M x 2)
 速率测试:
-
+上行:
+下行：858 Mbits/sec (0.026%)
 ```
 
 
