--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -118,8 +118,8 @@ HDCP v2.3 and HDCP v1.4
 ```
 eth0 / eth1 (1000M x 2)
 速率测试:
-上行:
-下行：858 Mbits/sec (0.026%)
+上行：954 Mbits/sec
+下行：858 Mbits/sec
 ```
 
 
