--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -14,9 +14,11 @@
 
 ## GPIO
 
+首先，通过拓展引脚章节，确认配置成GPIO模式的引脚位置以及编号，参考以下步骤可对指定GPIO输出高电平或低电平控制
+
 用户层控制GPIO输入输出
 
-开发板的拓展引脚的GPIO脚，
+开发板的拓展引脚的GPIO脚控制方式
 
 
 
