--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -14,7 +14,7 @@
 
 ## GPIO
 
-首先，通过拓展引脚章节，确认配置成GPIO模式的引脚位置以及编号，参考以下步骤可对指定GPIO输出高电平或低电平控制
+首先，通过拓展引脚章节，确认GPIO的引脚位置以及编号，参考以下步骤可对指定GPIO输出高电平或低电平控制
 
 用户层控制GPIO输入输出
 
