--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -16,7 +16,16 @@
 
 首先，通过拓展引脚章节，确认GPIO的引脚位置以及编号，参考以下步骤可对指定GPIO输出高电平或低电平控制
 
-用户层控制GPIO输入输出
+用户层控制GPIO输出状态
+
+```
+$ ls /sys/class/leds/
+
+gpio1b0/ gpio1b2/ gpio1d4/ gpio3b6/ 
+gpio1a4/ gpio1b1/ gpio1d0/ gpio3b5/ gpio4c4/
+```
+
+
 
 开发板的拓展引脚的GPIO脚控制方式
 
