--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -20,10 +20,12 @@
 
 ```
 $ ls /sys/class/leds/
-
-gpio1b0/ gpio1b2/ gpio1d4/ gpio3b6/ 
-gpio1a4/ gpio1b1/ gpio1d0/ gpio3b5/ gpio4c4/
+fan       GPIO3_D4  GPIO4_A6  GPIO4_C6  GPIO4_D1    SDMMC0_PWREN
+GPIO2_D6  GPIO3_D5  GPIO4_B0  GPIO4_C7  mmc2::      work
+GPIO2_D7  GPIO4_A4  GPIO4_B1  GPIO4_D0  PCIE_PWREN
 ```
+
+
 
 
 
