--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -25,6 +25,13 @@ GPIO2_D6  GPIO3_D5  GPIO4_B0  GPIO4_C7  mmc2::      work
 GPIO2_D7  GPIO4_A4  GPIO4_B1  GPIO4_D0  PCIE_PWREN
 ```
 
+控制GPIO输出电平状态
+
+```
+echo 1 >  /sys/class/leds/GPIO3_D4/brightness
+echo 0 >  /sys/class/leds/GPIO3_D4/brightness
+```
+
 
 
 
