--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -16,7 +16,7 @@
 
 首先，通过拓展引脚章节，确认GPIO的引脚位置以及编号，参考以下步骤可对指定GPIO输出高电平或低电平控制
 
-列举已经注册的GPIO控制节点
+**列举已经注册的GPIO控制节点**
 
 ```
 $ ls /sys/class/leds/
@@ -25,18 +25,15 @@ GPIO2_D6  GPIO3_D5  GPIO4_B0  GPIO4_C7  mmc2::      work
 GPIO2_D7  GPIO4_A4  GPIO4_B1  GPIO4_D0  PCIE_PWREN
 ```
 
-控制GPIO输出电平状态
+**控制GPIO输出电平状态**
 
 ```
+// GPIO3_D4 输出高电平
 echo 1 >  /sys/class/leds/GPIO3_D4/brightness
+
+// GPIO3_D4 输出低电平
 echo 0 >  /sys/class/leds/GPIO3_D4/brightness
 ```
-
-
-
-
-
-开发板的拓展引脚的GPIO脚控制方式
 
 
 
