--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -45,7 +45,7 @@ echo 0 >  /sys/class/leds/GPIO3_D4/brightness
 
 波特率：1500000 
 
-（接入座子的串口转USB工具也需要支持 1500000 波特率才能正常显示）
+（接入座子的USB转串口线也需要支持 1500000 波特率才能正常通信）
 
 
 
