--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -41,6 +41,8 @@ echo 0 >  /sys/class/leds/GPIO3_D4/brightness
 
 ### 调试串口使用
 
+**使用说明**
+
 40PIN座子右下脚 35-RX ，37-TX  ，39 - GND
 
 波特率：1500000 
@@ -48,6 +50,26 @@ echo 0 >  /sys/class/leds/GPIO3_D4/brightness
 >接入座子的USB转串口线也需要支持 1500000 波特率才能正常通信
 
 
+
+**下载串口助手软件**
+
+串口助手软件 可自行下载，下面以Mobaxterm为例
+
+Mobaxterm软件地址下载：https://mobaxterm.mobatek.net/
+
+
+
+**Mobaxterm操作步骤**
+
+1. 新建会话窗口
+2. 选择会话窗口类型为serial
+3. 选择串口COM编号（打开Windows系统 设备管理器 -> 端口界面可查看COM编号）
+4. 选择串口波特率1500000
+5. 启动会话窗口
+
+
+
+![image-20230519113450846](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20230519113450846.png)
 
 
 
