--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -104,11 +104,11 @@ GPIO0-D3	= gpio0 - ((4 - 1) * 8 + 3)		= gpio0-27 		= (0 * 32) + 27 	= 27
 
 
 
-## 系统功能
+## USB
 
-## USB 3.0 - Type A ( 1 - 3 口)
+### USB 3.0 - Type A ( 1 - 3 口)
 
-USB鼠标/键盘测试
+**USB鼠标/键盘测试**
 
 ```
 支持USB鼠标识别，正常使用
@@ -117,7 +117,7 @@ USB鼠标/键盘测试
 
 
 
-U盘测速
+**U盘测速**
 
 ```
 # 测速前，清除缓存
@@ -131,6 +131,13 @@ time dd if=/mnt/media_rw/490D-CC9B/new_file.img of=/dev/null bs=1M count=2048
 
 测试普通U盘：写速率 49 M/s，读速率 108 M/s
 测试结果仅供参考，实际根据设备不同存在差异
+```
+
+
+
+### USB DP - Type C
+
+```
 ```
 
 
