--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -138,6 +138,11 @@ time dd if=/mnt/media_rw/490D-CC9B/new_file.img of=/dev/null bs=1M count=2048
 ### USB DP - Type C
 
 ```
+Type-c 接口多功能
+	支持显示输出
+	支持HOST模式，U盘、鼠标等设备接入
+	支持DEVICE模式
+	支持自动识别切换功能模式
 ```
 
 
