--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -159,6 +159,7 @@ Type-c 接口多功能
 ## HDMI TX 
 
 ```
+支持HDMI TX 显示输出
 HDMI v2.1
 Supports up to 4K@120Hz
 Output data format: RGB/YUV444/YUV422/YUV420 8/10-bit
