--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -225,7 +225,7 @@ adb shell settings put global captive_portal_server 204.gentool.top
 ## MIC
 
 ```
-录音支持
+支持录音座子，接入MIC咪头进行录音即可
 PCM in:
  Format Name:   S16_LE, S24_LE
         Rate:   min=8000Hz      max=96000Hz
@@ -240,7 +240,7 @@ Period count:   min=2           max=32768
 ## Speaker Output
 
 ```
-支持左声道及右声道喇叭
+支持左声道及右声道喇叭音频输出
 
 播放支持
 PCM out:
