--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -275,6 +275,10 @@ Period count:   min=2           max=32768
 
 ## FAN
 
+### 硬件接线
+
+### 开关控制
+
 ```
 // 打开风扇
 console:/ # echo 0 > /sys/class/leds/fan/brightness
