--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -202,6 +202,10 @@ eth0 / eth1 (1000M x 2)
 
 ## 4G 模块
 
+### 硬件接线
+
+### 功能测试
+
 ```
 支持EC20 模块
 ```
@@ -222,6 +226,10 @@ adb shell settings put global captive_portal_server 204.gentool.top
 
 ## Headphone
 
+### 硬件接线
+
+### 功能测试
+
 ```
 支持3.5mm耳机接口音频输出
 ```
@@ -229,6 +237,10 @@ adb shell settings put global captive_portal_server 204.gentool.top
 
 
 ## MIC
+
+### 硬件接线
+
+### 功能测试
 
 ```
 支持录音座子，接入MIC咪头进行录音即可
@@ -244,6 +256,10 @@ Period count:   min=2           max=32768
 
 
 ## Speaker Output
+
+### 硬件接线
+
+### 功能测试
 
 ```
 支持左声道及右声道喇叭音频输出
