--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -179,6 +179,8 @@ HDCP v2.3 and HDCP v1.4
 
 ​		支持红外遥控
 
+### 功能测试
+
 
 
 ## 以太网
@@ -190,6 +192,8 @@ eth0 / eth1 (1000M x 2)
 下行：858 Mbits/sec
 ```
 
+### 功能测试
+
 
 
 ## WIFI & BT
@@ -197,6 +201,8 @@ eth0 / eth1 (1000M x 2)
 ```
 板载 AP6256 WIFI/BT 二合一模组
 ```
+
+### 功能测试
 
 
 
