--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -158,11 +158,13 @@ Supports CEC (Consumer Electronic Control) and ARC (Audio Return Channel)
 HDCP v2.3 and HDCP v1.4
 ```
 
+### 功能测试
+
 
 
 ## ADC
 
-
+### 功能测试
 
 
 
@@ -172,6 +174,8 @@ HDCP v2.3 and HDCP v1.4
 支持SD卡识别
 板载 Micro SD Card 接口
 ```
+
+### 功能测试
 
 
 
