--- a/a133/zh/12-硬件功能使用说明.md
+++ b/a133/zh/12-硬件功能使用说明.md
@@ -168,6 +168,16 @@ $ ls dev/tty*
 
 
 
+可以使用 microcom 进行测试拓展 UART2
+
+```
+microcom -s 115200 /dev/ttyS2
+```
+
+
+
+
+
 ## WIFI / BlueTooth
 
 K5 开发板 配备 AW859A高性能WIFI模块
