--- a/h618/zh/12-硬件功能测试.md
+++ b/h618/zh/12-硬件功能测试.md
@@ -247,3 +247,19 @@ network={
 # udhcpc -i wlan0
 ```
 
+
+
+## 10.RS485/232
+
+> 版本：K2C
+
+KICKPI-K2C设计有1路485一路232
+
+RS485验证：
+
+```shell
+
+micr
+
+```
+
