--- a/h618/zh/12-硬件功能测试.md
+++ b/h618/zh/12-硬件功能测试.md
@@ -255,11 +255,12 @@ network={
 
 KICKPI-K2C设计有1路485一路232
 
-RS485验证：
+RS485使用microcom验证：
+
+接收的内容会打印出来，发送的内容无打印
 
 ```shell
-
-micr
-
+microcom -s 115200 /dev/ttyAS3
 ```
 
+或者使用
