--- a/h618/zh/12-硬件功能测试.md
+++ b/h618/zh/12-硬件功能测试.md
@@ -253,9 +253,9 @@ network={
 
 > 版本：K2C
 
-KICKPI-K2C设计有1路485一路232
+KICKPI-K2C设计有1路485（/dev/ttyAS3）一路232(/dev/ttyAS4)
 
-RS485使用microcom验证：
+使用microcom验证：
 
 接收的内容会打印出来，发送的内容无打印
 
