--- a/h618/zh/12-硬件功能测试.md
+++ b/h618/zh/12-硬件功能测试.md
@@ -263,7 +263,7 @@ KICKPI-K2C设计有1路485（/dev/ttyAS3）一路232(/dev/ttyAS4)
 microcom -s 115200 /dev/ttyAS3
 ```
 
-或者使用echo直接发送 没有设置波特率默认9600
+或者使用echo直接发送，没有设置波特率默认9600
 
 ```
 echo "123" > /dev/ttyAS3
