--- a/h618/zh/12-硬件功能测试.md
+++ b/h618/zh/12-硬件功能测试.md
@@ -273,3 +273,31 @@ echo "123" > /dev/ttyAS3
 
 ## 11.4G验证
 
+1.确认usb模块是否加载
+
+```
+lsusb
+```
+
+2.确认串口结点是否生成
+
+```shell
+ls /dev/ttyUSB*
+```
+
+3.插拔电话卡重新拨号
+
+```
+sudo pppd call quectel-ppp &
+```
+
+4.外网ping测试
+
+```
+ping www.baidu.com
+```
+
+可能会出现没播通情况
+通过`ps -ef | grep pppd` 查看进程号
+`kill -9 (进程号)`
+重新拨号
