--- a/h618/zh/12-硬件功能测试.md
+++ b/h618/zh/12-硬件功能测试.md
@@ -291,13 +291,29 @@ ls /dev/ttyUSB*
 sudo pppd call quectel-ppp &
 ```
 
+可能会出现没播通情况
+通过`ps -ef | grep pppd` 查看进程号
+`kill -9 (进程号)`
+重新拨号
+
 4.外网ping测试
 
 ```
 ping www.baidu.com
 ```
 
-可能会出现没播通情况
-通过`ps -ef | grep pppd` 查看进程号
-`kill -9 (进程号)`
-重新拨号
+ping外网可能出现DNS解析失败，需要添加对应DNS
+
+修改resolv.conf文件
+
+```
+vim /etc/resolv.conf
+```
+
+添加如下面内容
+
+```
+nameserver 8.8.8.8
+nameserver 8.8.4.4
+```
+
