--- a/h618/zh/12-硬件功能测试.md
+++ b/h618/zh/12-硬件功能测试.md
@@ -260,35 +260,37 @@ KICKPI-K2C设计有1路485（/dev/ttyAS3）一路232(/dev/ttyAS4)
 接收的内容会打印出来，发送的内容无打印
 
 ```shell
-microcom -s 115200 /dev/ttyAS3
+# microcom -s 115200 /dev/ttyAS3
 ```
 
 或者使用echo直接发送，没有设置波特率默认9600
 
-```
-echo "123" > /dev/ttyAS3
+```shell
+# echo "123" > /dev/ttyAS3
 ```
 
 
 
 ## 11.4G验证
 
+> 版本：K2C
+
 1.确认usb模块是否加载
 
-```
-lsusb
+```shell
+# lsusb
 ```
 
 2.确认串口结点是否生成
 
 ```shell
-ls /dev/ttyUSB*
+# ls /dev/ttyUSB*
 ```
 
 3.插拔电话卡重新拨号
 
-```
-sudo pppd call quectel-ppp &
+```shell
+# sudo pppd call quectel-ppp &
 ```
 
 可能会出现没播通情况
@@ -298,21 +300,21 @@ sudo pppd call quectel-ppp &
 
 4.外网ping测试
 
-```
-ping www.baidu.com
+```shell
+# ping www.baidu.com
 ```
 
 ping外网可能出现DNS解析失败，需要添加对应DNS
 
 修改resolv.conf文件
 
-```
-vim /etc/resolv.conf
+```shell
+# vim /etc/resolv.conf
 ```
 
 可以添加下面内容:
 
-```
+```shell
 nameserver 8.8.8.8
 nameserver 8.8.4.4
 ```
