--- a/h618/zh/12-硬件功能测试.md
+++ b/h618/zh/12-硬件功能测试.md
@@ -124,6 +124,25 @@ K2B开发板 配备AW859A高性能WIFI模块
 
 支持2.4G/5G双频段，WIFI5，1T1R，BT5.0
 
+### 4.1 WIFI
+
+```shell
+修改wifi名和密码
+# vi /etc/wpa_supplicant.conf
+# cat /etc/wpa_supplicant.conf
+ctrl_interface=/var/run/wpa_supplicant
+ap_scan=1
+update_config=1
+
+network={
+        ssid="wifi_oranth_2.4"
+        psk="123456789"
+        key_mgmt=WPA-PSK
+}
+# wpa_supplicant -D nl80211 -i wlan0 -c /etc/wpa_supplicant.conf -B
+# udhcpc -i wlan0
+```
+
 
 
 ## 5. KEY
@@ -229,25 +248,6 @@ system下，找到developer options
 
 
 ## 9.WIFI
-
-```shell
-修改wifi名和密码
-# vi /etc/wpa_supplicant.conf
-# cat /etc/wpa_supplicant.conf
-ctrl_interface=/var/run/wpa_supplicant
-ap_scan=1
-update_config=1
-
-network={
-        ssid="wifi_oranth_2.4"
-        psk="123456789"
-        key_mgmt=WPA-PSK
-}
-# wpa_supplicant -D nl80211 -i wlan0 -c /etc/wpa_supplicant.conf -B
-# udhcpc -i wlan0
-```
-
-
 
 ## 10.RS485/232
 
