--- a/h618/zh/12-硬件功能测试.md
+++ b/h618/zh/12-硬件功能测试.md
@@ -293,8 +293,8 @@ KICKPI-K2C设计有1路485（/dev/ttyAS3）一路232(/dev/ttyAS4)
 
 可能会出现没播通情况
 通过`ps -ef | grep pppd` 查看进程号
-`kill -9 (进程号)`
-重新拨号
+`kill -9 (进程号)` 结束进程
+然后重新拨号
 
 4.外网ping测试
 
