--- a/h618/zh/12-硬件功能测试.md
+++ b/h618/zh/12-硬件功能测试.md
@@ -145,6 +145,55 @@ network={
 
 
 
+### 4.2 BT蓝牙
+
+1.安装蓝牙工具
+
+```shell
+$ sudo apt-get install bluez
+```
+
+2.查看蓝牙节点
+
+```shell
+$ hciconfig -a  
+```
+
+3.扫描蓝牙
+
+```shell
+$ hcitool scan
+```
+
+4.配对蓝牙设备：选择你想要连接的蓝牙设备，并执行以下命令进行配对：
+
+```shell
+$ sudo bluez-simple-agent hci0 <设备MAC地址>
+```
+
+
+替换<设备MAC地址>为你选择的蓝牙设备的MAC地址。
+
+5.输入配对码：在执行上述命令后，系统会要求输入配对码。根据提示，输入正确的配对码。
+
+6.建立蓝牙连接：执行以下命令来建立蓝牙连接：
+
+```
+$ sudo bluez-test-device trusted <设备MAC地址> yes
+$ sudo bluez-test-input connect <设备MAC地址>
+```
+
+   替换<设备MAC地址>为你选择的蓝牙设备的MAC地址。
+
+7.验证连接状态：可以使用以下命令来验证蓝牙连接是否成功：
+
+```
+$ sudo bluez-test-device list
+```
+
+
+   该命令将列出与系统建立连接的蓝牙设备。
+
 ## 5. KEY
 
 K2B配备3个按键，分别是RECOVERY KEY、RST KEY、MASKROM KEY
