--- a/h618/zh/12-硬件功能测试.md
+++ b/h618/zh/12-硬件功能测试.md
@@ -178,7 +178,7 @@ $ sudo bluez-simple-agent hci0 <设备MAC地址>
 
 6.建立蓝牙连接：执行以下命令来建立蓝牙连接：
 
-```
+```shell
 $ sudo bluez-test-device trusted <设备MAC地址> yes
 $ sudo bluez-test-input connect <设备MAC地址>
 ```
@@ -187,7 +187,7 @@ $ sudo bluez-test-input connect <设备MAC地址>
 
 7.验证连接状态：可以使用以下命令来验证蓝牙连接是否成功：
 
-```
+```shell
 $ sudo bluez-test-device list
 ```
 
