--- a/h618/zh/12-硬件功能测试.md
+++ b/h618/zh/12-硬件功能测试.md
@@ -143,7 +143,18 @@ network={
 # udhcpc -i wlan0
 ```
 
+### ubuntu设置开机自动连接wifi并获取ip
 
+``` shell
+vi /etc/network/interfaces
+添加以下内容
+auto wlan0
+allow-hotplug wlan0
+iface wlan0 inet dhcp
+wpa-conf /etc/wpa_supplicant.conf
+```
+
+## 
 
 ### 4.2 BT蓝牙
 
