--- a/h618/zh/12-硬件功能测试.md
+++ b/h618/zh/12-硬件功能测试.md
@@ -120,7 +120,7 @@ $ echo 0 > /sys/class/leds/work-led/brightness
 
 ## 4. WIFI / BlueTooth
 
-K2B开发板 配备AW859A高性能WIFI模块
+K2B、K2C 开发板 配备AW859A高性能WIFI模块
 
 支持2.4G/5G双频段，WIFI5，1T1R，BT5.0
 
