--- a/h618/zh/12-硬件功能测试.md
+++ b/h618/zh/12-硬件功能测试.md
@@ -126,10 +126,12 @@ K2B、K2C 开发板 配备AW859A高性能WIFI模块
 
 ### 4.1 WIFI
 
-```shell
 修改wifi名和密码
+
+```shell
 # vi /etc/wpa_supplicant.conf
 # cat /etc/wpa_supplicant.conf
+
 ctrl_interface=/var/run/wpa_supplicant
 ap_scan=1
 update_config=1
@@ -139,6 +141,11 @@ network={
         psk="123456789"
         key_mgmt=WPA-PSK
 }
+```
+
+连接WiFi
+
+```shell
 # wpa_supplicant -D nl80211 -i wlan0 -c /etc/wpa_supplicant.conf -B
 # udhcpc -i wlan0
 ```
