--- a/h618/zh/12-硬件功能测试.md
+++ b/h618/zh/12-硬件功能测试.md
@@ -131,7 +131,7 @@ K2B、K2C 开发板 配备AW859A高性能WIFI模块
 ```shell
 # vi /etc/wpa_supplicant.conf
 # cat /etc/wpa_supplicant.conf
-
+//添加以下内容
 ctrl_interface=/var/run/wpa_supplicant
 ap_scan=1
 update_config=1
@@ -154,7 +154,7 @@ network={
 
 ``` shell
 vi /etc/network/interfaces
-添加以下内容
+//添加以下内容
 auto wlan0
 allow-hotplug wlan0
 iface wlan0 inet dhcp
