--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -678,7 +678,19 @@ $ echo A > /dev/watchdog
 
 ### Linux 播放测试
 
+```
+# cat /proc/asound/cards
+ 0 [rockchiphdmiin ]: rockchip_hdmiin - rockchip,hdmiin
+                      rockchip,hdmiin
+ 1 [rockchipes8388 ]: rockchip-es8388 - rockchip-es8388
+                      rockchip-es8388
+ 2 [rockchiphdmi0  ]: rockchip-hdmi0 - rockchip-hdmi0
+                      rockchip-hdmi0
+ 3 [rockchiphdmi1  ]: rockchip-hdmi1 - rockchip-hdmi1
+                      rockchip-hdmi1
+```
 
+>喇叭声卡为 es8388，即声卡1
 
 
 
