--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -678,6 +678,8 @@ $ echo A > /dev/watchdog
 
 ### Linux 播放测试
 
+**列举查看声卡**
+
 ```
 # cat /proc/asound/cards
  0 [rockchiphdmiin ]: rockchip_hdmiin - rockchip,hdmiin
@@ -691,6 +693,8 @@ $ echo A > /dev/watchdog
 ```
 
 >喇叭声卡为 es8388，即声卡1
+
+
 
 
 
