--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -678,6 +678,18 @@ $ echo A > /dev/watchdog
 
 ### Linux 播放测试
 
+
+
+**alsa工具**
+
+Linux 系统一般可以通过alsa工具控制声卡配置以及音频播放
+
+```
+sudo apt install alsa-utils
+```
+
+
+
 **列举查看声卡**
 
 ```
@@ -693,12 +705,4 @@ $ echo A > /dev/watchdog
 ```
 
 >喇叭声卡为 es8388，即声卡1
-
-
-
-**alsa工具**
-
-Linux 系统一般可以通过alsa工具控制声卡配置以及音频播放
-
-
 
