--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -678,8 +678,6 @@ $ echo A > /dev/watchdog
 
 ### Linux 播放测试
 
-
-
 **alsa工具**
 
 Linux 系统一般可以通过alsa工具控制声卡配置以及音频播放
@@ -687,6 +685,8 @@ Linux 系统一般可以通过alsa工具控制声卡配置以及音频播放
 ```
 sudo apt install alsa-utils
 ```
+
+>安装后 aplay 、arecord 、amixer 等命令使用
 
 
 
