--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -680,7 +680,9 @@ $ echo A > /dev/watchdog
 
 **alsa工具**
 
-Linux 系统一般可以通过alsa工具控制声卡配置以及音频播放，目前Linux系统软件已内置相关工具，如无相关工具可手动install
+Linux 系统一般可以通过alsa工具控制声卡配置以及音频播放，目前Linux系统软件已内置相关工具。
+
+如无相关工具，可执行下列命令进行安装
 
 ```
 sudo apt install alsa-utils
