--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -714,8 +714,28 @@ $ cat /proc/asound/cards
 
 ```
 $ amixer -c 1
+Simple mixer control 'Headphone',0
+  Capabilities: pswitch pswitch-joined
+  Playback channels: Mono
+  Mono: Playback [off]
+Simple mixer control 'Speaker',0
+  Capabilities: pswitch pswitch-joined
+  Playback channels: Mono
+  Mono: Playback [on]
+Simple mixer control 'PCM',0
+  Capabilities: volume
+  Playback channels: Front Left - Front Right
+  Capture channels: Front Left - Front Right
+  Limits: 0 - 192
+  Front Left: 192 [100%] [0.00dB]
+  Front Right: 192 [100%] [0.00dB]
 或
 $ amixer controls -c 1
+numid=36,iface=CARD,name='Headphone Jack'
+numid=37,iface=CARD,name='Headset Mic Jack'
+numid=38,iface=MIXER,name='Headphone Switch'
+numid=31,iface=MIXER,name='PCM Volume'
+...
 ```
 
 
