--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -712,7 +712,7 @@ $ cat /proc/asound/cards
 
 查看声卡控制配置列表
 
-```
+```shell
 $ amixer -c 1
 Simple mixer control 'Headphone',0
   Capabilities: pswitch pswitch-joined
@@ -729,7 +729,8 @@ Simple mixer control 'PCM',0
   Limits: 0 - 192
   Front Left: 192 [100%] [0.00dB]
   Front Right: 192 [100%] [0.00dB]
-或
+...
+
 $ amixer controls -c 1
 numid=36,iface=CARD,name='Headphone Jack'
 numid=37,iface=CARD,name='Headset Mic Jack'
