--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -692,6 +692,15 @@ $ sudo apt install alsa-utils
 
 
 
+使用说明
+
+```
+```
+
+
+
+
+
 **列举查看声卡**
 
 ```
@@ -710,7 +719,7 @@ $ cat /proc/asound/cards
 
 
 
-查看声卡控制配置列表
+**查看声卡控制配置列表**
 
 ```shell
 $ amixer -c 1
@@ -741,7 +750,7 @@ numid=31,iface=MIXER,name='PCM Volume'
 
 
 
-获取声卡指定配置
+**获取声卡指定配置**
 
 ```
 amixer cget -c 1 numid=39,iface=MIXER,name='Speaker Switch'
@@ -749,7 +758,7 @@ amixer cget -c 1 numid=39,iface=MIXER,name='Speaker Switch'
 
 
 
-设置声卡指定配置
+**设置声卡指定配置**
 
 ```
 amixer sget -c 1 numid=39,iface=MIXER,name='Speaker Switch' 1
