--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -692,9 +692,24 @@ $ sudo apt install alsa-utils
 
 
 
-使用说明
+**使用说明**
 
 ```
+$ amixer -h
+Usage: amixer <options> [command]
+
+Available options:
+  -h,--help       this help
+...
+
+aplay -h
+Usage: aplay [OPTION]... [FILE]...
+
+-h, --help              help
+    --version           print current version
+-l, --list-devices      list all soundcards and digital audio devices
+-L, --list-pcms         list device names
+-D, --device=NAME       select PCM by name
 ```
 
 
