--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -694,7 +694,7 @@ $ sudo apt install alsa-utils
 
 **使用说明**
 
-```
+```shell
 $ amixer -h
 Usage: amixer <options> [command]
 
@@ -702,17 +702,23 @@ Available options:
   -h,--help       this help
 ...
 
-aplay -h
+$ aplay -h
 Usage: aplay [OPTION]... [FILE]...
 
 -h, --help              help
     --version           print current version
 -l, --list-devices      list all soundcards and digital audio devices
+...
+
+$ arecord -h
+Usage: arecord [OPTION]... [FILE]...
+
+-h, --help              help
+    --version           print current version
+-l, --list-devices      list all soundcards and digital audio devices
 -L, --list-pcms         list device names
--D, --device=NAME       select PCM by name
+...
 ```
-
-
 
 
 
