--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -776,7 +776,10 @@ numid=31,iface=MIXER,name='PCM Volume'
 **获取声卡指定配置**
 
 ```
-amixer cget -c 1 numid=39,iface=MIXER,name='Speaker Switch'
+$ amixer cget -c 1 numid=39,iface=MIXER,name='Speaker Switch'
+numid=39,iface=MIXER,name='Speaker Switch'
+  ; type=BOOLEAN,access=rw------,values=1
+  : values=on
 ```
 
 
@@ -784,6 +787,6 @@ amixer cget -c 1 numid=39,iface=MIXER,name='Speaker Switch'
 **设置声卡指定配置**
 
 ```
-amixer sget -c 1 numid=39,iface=MIXER,name='Speaker Switch' 1
+$ amixer sget -c 1 numid=39,iface=MIXER,name='Speaker Switch' 1
 ```
 
