--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -790,3 +790,10 @@ numid=39,iface=MIXER,name='Speaker Switch'
 $ amixer sget -c 1 numid=39,iface=MIXER,name='Speaker Switch' 1
 ```
 
+
+
+**喇叭播放测试**
+
+```
+```
+
