--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -795,6 +795,10 @@ $ amixer sget -c 1 numid=39,iface=MIXER,name='Speaker Switch' 1
 **喇叭播放测试**
 
 ```
-aplay -D hw:1,0 1.wav
+$ amixer cset -c 1 numid=39,iface=MIXER,name='Speaker Switch' 1
+$ amixer cset -c 1 numid=35,iface=MIXER,name='Output 2 Playback Volume' 20 20
+$ amixer cset -c 1 numid=50,iface=MIXER,name='Right Mixer Right Playback Switch' 1
+$ amixer cset -c 1 numid=48,iface=MIXER,name='Left Mixer Left Playback Switch' 1
+$ aplay -D hw:1,0 1.wav
 ```
 
