--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -800,5 +800,11 @@ $ aplay -D hw:1,0 1.wav
 **耳机播放测试**
 
 ```
+$ amixer cset -c 1 numid=38,iface=MIXER,name='Headphone Switch' 1
+$ amixer cset -c 1 numid=36,iface=CARD,name='Headphone Jack' 1
+$ amixer cset -c 1 numid=35,iface=MIXER,name='Output 1 Playback Volume' 20 20
+$ aplay -D hw:1,0 1.wav
 ```
+
+
 
