--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -820,7 +820,7 @@ amixer cset -c 1 numid=40,iface=MIXER,name='Main Mic Switch' 1
 amixer cset -c 1 numid=27,iface=MIXER,name='Left Channel Capture Volume' 3
 amixer cset -c 1 numid=28,iface=MIXER,name='Right Channel Capture Volume' 3
 
-
+arecord -D hw:1,0 a.wav -r 48000 -f S16_LE -d 5 -c 2
 ```
 
 
