--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -812,15 +812,14 @@ $ aplay -D hw:1,0 1.wav
 ### Linux 录音测试
 
 ```
-amixer cset -c 1 numid=31,iface=MIXER,name='PCM Volume' 192 192
-amixer cset -c 1 numid=25,iface=MIXER,name='Capture Digital Volume' 192 192
-amixer cset -c 1 numid=26,iface=MIXER,name='Capture Mute' 0
-amixer cset -c 1 numid=30,iface=MIXER,name='Capture Polarity' 0
-amixer cset -c 1 numid=40,iface=MIXER,name='Main Mic Switch' 1
-amixer cset -c 1 numid=27,iface=MIXER,name='Left Channel Capture Volume' 3
-amixer cset -c 1 numid=28,iface=MIXER,name='Right Channel Capture Volume' 3
-
-arecord -D hw:1,0 a.wav -r 48000 -f S16_LE -d 5 -c 2
+$ amixer cset -c 1 numid=31,iface=MIXER,name='PCM Volume' 192 192
+$ amixer cset -c 1 numid=25,iface=MIXER,name='Capture Digital Volume' 192 192
+$ amixer cset -c 1 numid=26,iface=MIXER,name='Capture Mute' 0
+$ amixer cset -c 1 numid=30,iface=MIXER,name='Capture Polarity' 0
+$ amixer cset -c 1 numid=40,iface=MIXER,name='Main Mic Switch' 1
+$ amixer cset -c 1 numid=27,iface=MIXER,name='Left Channel Capture Volume' 3
+$ amixer cset -c 1 numid=28,iface=MIXER,name='Right Channel Capture Volume' 3
+$ arecord -D hw:1,0 a.wav -r 48000 -f S16_LE -d 5 -c 2
 ```
 
 
