--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -811,6 +811,8 @@ $ aplay -D hw:1,0 1.wav
 
 ### Linux 录音测试
 
+**MIC录音测试**
+
 ```
 $ amixer cset -c 1 numid=31,iface=MIXER,name='PCM Volume' 192 192
 $ amixer cset -c 1 numid=25,iface=MIXER,name='Capture Digital Volume' 192 192
@@ -821,6 +823,8 @@ $ amixer cset -c 1 numid=27,iface=MIXER,name='Left Channel Capture Volume' 3
 $ amixer cset -c 1 numid=28,iface=MIXER,name='Right Channel Capture Volume' 3
 $ arecord -D hw:1,0 a.wav -r 48000 -f S16_LE -d 5 -c 2
 ```
+
+
 
 
 
