--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -824,6 +824,8 @@ $ amixer cset -c 1 numid=44,iface=MIXER,name='Differential Mux' 1
 $ arecord -D hw:1,0 a.wav -r 48000 -f S16_LE -d 5 -c 2
 ```
 
+>适用于 es8388 声卡
+
 
 
 **Headset MIC录音测试**
@@ -839,5 +841,5 @@ $ amixer cset -c 1 numid=44,iface=MIXER,name='Differential Mux' 0
 $ arecord -D hw:1,0 a.wav -r 48000 -f S16_LE -d 5 -c 2
 ```
 
-
+>适用于 es8388 声卡
 
