--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -795,6 +795,8 @@ $ amixer cset -c 1 numid=48,iface=MIXER,name='Left Mixer Left Playback Switch' 1
 $ aplay -D hw:1,0 1.wav
 ```
 
+>适用于 es8388 声卡
+
 
 
 **耳机播放测试**
@@ -804,6 +806,8 @@ $ amixer cset -c 1 numid=38,iface=MIXER,name='Headphone Switch' 1
 $ amixer cset -c 1 numid=35,iface=MIXER,name='Output 1 Playback Volume' 20 20
 $ aplay -D hw:1,0 1.wav
 ```
+
+>适用于 es8388 声卡
 
 
 
