--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -795,7 +795,7 @@ $ amixer cset -c 1 numid=48,iface=MIXER,name='Left Mixer Left Playback Switch' 1
 $ aplay -D hw:1,0 1.wav
 ```
 
->适用于 es8388 声卡
+>声卡配置适用于 es8388 声卡
 
 
 
