--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -795,7 +795,7 @@ $ amixer cset -c 1 numid=48,iface=MIXER,name='Left Mixer Left Playback Switch' 1
 $ aplay -D hw:1,0 1.wav
 ```
 
->声卡配置适用于 es8388 声卡
+>amixer 配置适用于 es8388 声卡
 
 
 
@@ -807,7 +807,7 @@ $ amixer cset -c 1 numid=35,iface=MIXER,name='Output 1 Playback Volume' 20 20
 $ aplay -D hw:1,0 1.wav
 ```
 
->适用于 es8388 声卡
+>amixer 配置适用于 es8388 声卡
 
 
 
@@ -828,7 +828,7 @@ $ amixer cset -c 1 numid=44,iface=MIXER,name='Differential Mux' 1
 $ arecord -D hw:1,0 a.wav -r 48000 -f S16_LE -d 5 -c 2
 ```
 
->适用于 es8388 声卡
+>amixer 配置适用于 es8388 声卡
 
 
 
@@ -845,5 +845,5 @@ $ amixer cset -c 1 numid=44,iface=MIXER,name='Differential Mux' 0
 $ arecord -D hw:1,0 a.wav -r 48000 -f S16_LE -d 5 -c 2
 ```
 
->适用于 es8388 声卡
+>amixer 配置适用于 es8388 声卡
 
