--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -58,6 +58,83 @@ K1开发板的扩展40Pin引脚中默认有9路可控GPIO。
 
 
 
+### sys gpio控制
+
+当存在将拓展引脚配置为输入的需求，默认软件的gpio-led不能满足需求。
+
+将GPIO释放出来，通过/sys/class/gpio进行控制
+
+
+
+步骤一
+
+先将对应GPIO引脚注释，/sys/class/gpio/export 只能导入未注册的 gpio
+
+比如PH8，如需其他引脚，一样在 leds 结点下注释即可 ,  下面内容都以PH8 做举例
+
+```diff
+vim longan/device/config/chips/h618/configs/p2/linux-5.4/board.dts  //android
+vim source/kernel/linux-5.4-h618/arch/arm64/boot/dts/sunxi/board.dts //Linux
++ /*
+			PH8 {
+				label = "PH8";
+				gpios = <&pio PH 8 1 0 1 0>;
+				linux,default_trigger = "default-on";
+				default-state = "on";
+			};
++ */
+```
+
+
+
+步骤二
+
+​		编译镜像，重新烧录
+
+
+
+步骤三
+
+​		确认gpio未被注册
+
+```
+cat /sys/kernel/debug/pinctrl/pinctrl-rockchip-pinctrl/pinmux-pins | grep 
+```
+
+
+
+步骤四
+
+​		通过 /sys/class/gpio/export 注册 PH8 并进行控制
+
+```
+// 注册
+root@kickpi:~# echo  232 > /sys/class/gpio/export
+// 查看是否生成
+root@kickpi:~# ls /sys/class/gpio/
+export  gpio232  gpiochip0  gpiochip352  unexport
+// 注册后的结点内容
+root@kickpi:~# ls /sys/class/gpio/gpio232
+active_low  device  direction  edge  power  subsystem  uevent  value
+root@kickpi:~#
+```
+
+​			通过结点下的内容控制 gpio , 常用如下
+
+```
+direction
+	in / out
+	echo in > /sys/class/gpio/gpio232/direction
+	echo out > /sys/class/gpio/gpio232/direction
+value
+	0 / 1
+	cat /sys/class/gpio/gpio232/value 		// 读取
+	echo 1 > /sys/class/gpio/gpio232/value	// 配置高电平
+	echo 0 > /sys/class/gpio/gpio232/value  // 配置低电平
+```
+
+
+
 ### 用户层控制GPIO电平
 
 **查看GPIO注册列表**
