--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -70,22 +70,16 @@ K1开发板的扩展40Pin引脚中默认有9路可控GPIO。
 
 先将对应GPIO引脚注释，/sys/class/gpio/export 只能导入未注册的 gpio
 
-比如PH8，如需其他引脚，一样在 leds 结点下注释即可 ,  下面内容都以PH8 做举例
+将设备树对应IO取消使能
 
-```diff
-vim longan/device/config/chips/h618/configs/p2/linux-5.4/board.dts  //android
-vim source/kernel/linux-5.4-h618/arch/arm64/boot/dts/sunxi/board.dts //Linux
-+ /*
-			PH8 {
-				label = "PH8";
-				gpios = <&pio PH 8 1 0 1 0>;
-				linux,default_trigger = "default-on";
-				default-state = "on";
-			};
-+ */
 ```
-
-
+kernel-5.10/arch/arm64/boot/dts/rockchip/rk3568-kickpi-k1-android.dts
+kernel-5.10/arch/arm64/boot/dts/rockchip/rk3568-kickpi-k1b-android.dts
+kernel-5.10/arch/arm64/boot/dts/rockchip/rk3568-kickpi-k1b-linux.dts
+kernel-5.10/arch/arm64/boot/dts/rockchip/rk3568-kickpi-k1-linux.dts
+kernel-5.10/arch/arm64/boot/dts/rockchip/rk3562-kickpi-k3-android.dts
+kernel-5.10/arch/arm64/boot/dts/rockchip/rk3562-kickpi-k3-linux.dts
+```
 
 步骤二
 
@@ -98,14 +92,14 @@ vim source/kernel/linux-5.4-h618/arch/arm64/boot/dts/sunxi/board.dts //Linux
 ​		确认gpio未被注册
 
 ```
-cat /sys/kernel/debug/pinctrl/pinctrl-rockchip-pinctrl/pinmux-pins | grep 
+cat /sys/kernel/debug/pinctrl/pinctrl-rockchip-pinctrl/pinmux-pins
 ```
 
 
 
 步骤四
 
-​		通过 /sys/class/gpio/export 注册 PH8 并进行控制
+​		通过 /sys/class/gpio/export 注册 并进行控制
 
 ```
 // 注册
