--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -95,7 +95,7 @@ kernel-5.10/arch/arm64/boot/dts/rockchip/rk3562-kickpi-k3-linux.dts
 cat /sys/kernel/debug/pinctrl/pinctrl-rockchip-pinctrl/pinmux-pins
 ```
 
-
+未注册如下：pin 46 (gpio1-14): (MUX UNCLAIMED) (GPIO UNCLAIMED)
 
 步骤四
 
