--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -56,6 +56,15 @@ K1开发板的扩展40Pin引脚中默认有9路可控GPIO。
 
 首先，通过 [[扩展引脚]] 章节，确认GPIO引脚位置、编号，参考以下步骤可对指定GPIO进行状态控制。
 
+### PIN 脚计算
+
+GPIO1-D0 (gpio1-24)为例：
+
+```
+每组GPIO有32位：0-32
+A（0-7）B（8-15）C（15-23）D（24-31）
+```
+
 
 
 ### sys gpio控制
