--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -81,13 +81,12 @@ A（0-7）B（8-15）C（16-23）D（24-31）
 
 将设备树对应IO取消使能
 
+设备树位于：
+
 ```
-kernel-5.10/arch/arm64/boot/dts/rockchip/rk3568-kickpi-k1-android.dts
-kernel-5.10/arch/arm64/boot/dts/rockchip/rk3568-kickpi-k1b-android.dts
-kernel-5.10/arch/arm64/boot/dts/rockchip/rk3568-kickpi-k1b-linux.dts
-kernel-5.10/arch/arm64/boot/dts/rockchip/rk3568-kickpi-k1-linux.dts
-kernel-5.10/arch/arm64/boot/dts/rockchip/rk3562-kickpi-k3-android.dts
-kernel-5.10/arch/arm64/boot/dts/rockchip/rk3562-kickpi-k3-linux.dts
+kernel-5.10/arch/arm64/boot/dts/rockchip/
+40pin:	rk3568-kickpi-extend-40pin.dtsi
+20pin:	rk3568-kickpi-extend-20pin.dtsi
 ```
 
 步骤二
